Merged JSON read and write processors.