@@ -13,11 +13,12 @@ import jadex.commons.transformation.traverser.ITraverseProcessor;
 import jadex.commons.transformation.traverser.Traverser;
 import jadex.commons.transformation.traverser.Traverser.MODE;
 import jadex.transformation.jsonserializer.JsonTraverser;
+import jadex.transformation.jsonserializer.processors.write.JsonWriteContext;
 
 /**
  * 
  */
-public class JsonCalendarProcessor implements ITraverseProcessor
+public class JsonCalendarProcessor extends AbstractJsonProcessor
 {
 	/**
 	 *  Test if the processor is applicable.
@@ -26,10 +27,23 @@ public class JsonCalendarProcessor implements ITraverseProcessor
 	 *    e.g. by cloning the object using the class loaded from the target class loader.
 	 *  @return True, if is applicable. 
 	 */
-	public boolean isApplicable(Object object, Type type, ClassLoader targetcl, Object context)
+	protected boolean isApplicable(Object object, Type type, ClassLoader targetcl, JsonReadContext context)
 	{
 		Class<?> clazz = SReflect.getClass(type);
 		return object instanceof JsonObject && SReflect.isSupertype(Calendar.class, clazz);
+	}
+	
+	/**
+	 *  Test if the processor is applicable.
+	 *  @param object The object.
+	 *  @param targetcl	If not null, the traverser should make sure that the result object is compatible with the class loader,
+	 *    e.g. by cloning the object using the class loaded from the target class loader.
+	 *  @return True, if is applicable. 
+	 */
+	protected boolean isApplicable(Object object, Type type, ClassLoader targetcl, JsonWriteContext context)
+	{
+		Class<?> clazz = SReflect.getClass(type);
+		return SReflect.isSupertype(Calendar.class, clazz);
 	}
 	
 	/**
@@ -39,7 +53,7 @@ public class JsonCalendarProcessor implements ITraverseProcessor
 	 *    e.g. by cloning the object using the class loaded from the target class loader.
 	 *  @return The processed object.
 	 */
-	public Object process(Object object, Type type, Traverser traverser, List<ITraverseProcessor> conversionprocessors, List<ITraverseProcessor> processors, MODE mode, ClassLoader targetcl, Object context)
+	protected Object readObject(Object object, Type type, Traverser traverser, List<ITraverseProcessor> conversionprocessors, List<ITraverseProcessor> processors, MODE mode, ClassLoader targetcl, JsonReadContext context)
 	{
 		Calendar ret = null;
 		
@@ -49,7 +63,7 @@ public class JsonCalendarProcessor implements ITraverseProcessor
 		
 		try
 		{
-			ret = (Calendar)cl.newInstance();
+			ret = (Calendar)cl.getDeclaredConstructor().newInstance();
 			ret.setTime(new Date(val));
 //			traversed.put(object, ret);
 //			((JsonReadContext)context).addKnownObject(ret);
@@ -64,5 +78,29 @@ public class JsonCalendarProcessor implements ITraverseProcessor
 		}
 		
 		return ret;
+	}
+	
+	/**
+	 *  Process an object.
+	 *  @param object The object.
+	 * @param targetcl	If not null, the traverser should make sure that the result object is compatible with the class loader,
+	 *    e.g. by cloning the object using the class loaded from the target class loader.
+	 *  @return The processed object.
+	 */
+	protected Object writeObject(Object object, Type type, Traverser traverser, List<ITraverseProcessor> conversionprocessors, List<ITraverseProcessor> processors, MODE mode, ClassLoader targetcl, JsonWriteContext wr)
+	{
+		wr.addObject(wr.getCurrentInputObject());
+
+		long time = ((Calendar)object).getTime().getTime();
+		
+		wr.write("{");
+		wr.writeNameValue("value", time);
+		if(wr.isWriteClass())
+			wr.write(",").writeClass(object.getClass());
+		if(wr.isWriteId())
+			wr.write(",").writeId();
+		wr.write("}");
+		
+		return object;
 	}
 }
