@@ -5,6 +5,7 @@ import java.lang.reflect.Type;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import com.eclipsesource.json.JsonObject;
 import com.eclipsesource.json.JsonValue;
@@ -15,11 +16,12 @@ import jadex.commons.transformation.traverser.ITraverseProcessor;
 import jadex.commons.transformation.traverser.Traverser;
 import jadex.commons.transformation.traverser.Traverser.MODE;
 import jadex.transformation.jsonserializer.JsonTraverser;
+import jadex.transformation.jsonserializer.processors.write.JsonWriteContext;
 
 /**
  *  Processor for reading maps.
  */
-public class JsonMapProcessor implements ITraverseProcessor
+public class JsonMapProcessor extends AbstractJsonProcessor
 {
 	/**
 	 *  Test if the processor is applicable.
@@ -28,11 +30,24 @@ public class JsonMapProcessor implements ITraverseProcessor
 	 *    e.g. by cloning the object using the class loaded from the target class loader.
 	 *  @return True, if is applicable. 
 	 */
-	public boolean isApplicable(Object object, Type type, ClassLoader targetcl, Object context)
+	protected boolean isApplicable(Object object, Type type, ClassLoader targetcl, JsonReadContext context)
 	{
 		Class<?> clazz = SReflect.getClass(type);
 //		return object instanceof JsonObject && (clazz==null || SReflect.isSupertype(Map.class, clazz));
 		return object instanceof JsonObject && SReflect.isSupertype(Map.class, clazz);
+	}
+	
+	/**
+	 *  Test if the processor is applicable.
+	 *  @param object The object.
+	 *  @param targetcl	If not null, the traverser should make sure that the result object is compatible with the class loader,
+	 *    e.g. by cloning the object using the class loaded from the target class loader.
+	 *  @return True, if is applicable. 
+	 */
+	protected boolean isApplicable(Object object, Type type, ClassLoader targetcl, JsonWriteContext context)
+	{
+		Class<?> clazz = SReflect.getClass(type);
+		return SReflect.isSupertype(Map.class, clazz);
 	}
 	
 	/**
@@ -42,10 +57,11 @@ public class JsonMapProcessor implements ITraverseProcessor
 	 *    e.g. by cloning the object using the class loaded from the target class loader.
 	 *  @return The processed object.
 	 */
-	public Object process(Object object, Type type, Traverser traverser, List<ITraverseProcessor> conversionprocessors, List<ITraverseProcessor> processors, MODE mode, ClassLoader targetcl, Object context)
+	@SuppressWarnings("unchecked")
+	protected Object readObject(Object object, Type type, Traverser traverser, List<ITraverseProcessor> conversionprocessors, List<ITraverseProcessor> processors, MODE mode, ClassLoader targetcl, JsonReadContext context)
 	{
-		JsonReadContext rc = (JsonReadContext)context;
 		Class<?> clazz = SReflect.getClass(type);
+		@SuppressWarnings("rawtypes")
 		Map ret = (Map)getReturnObject(object, clazz);
 		JsonObject obj = (JsonObject)object;
 //		traversed.put(object, ret);
@@ -107,12 +123,115 @@ public class JsonMapProcessor implements ITraverseProcessor
 	}
 	
 	/**
+	 *  Process an object.
+	 *  @param object The object.
+	 * @param targetcl	If not null, the traverser should make sure that the result object is compatible with the class loader,
+	 *    e.g. by cloning the object using the class loaded from the target class loader.
+	 *  @return The processed object.
+	 */
+	protected Object writeObject(Object object, Type type, Traverser traverser, List<ITraverseProcessor> conversionprocessors, List<ITraverseProcessor> processors, MODE mode, ClassLoader targetcl, JsonWriteContext wr)
+	{
+		wr.addObject(wr.getCurrentInputObject());
+		
+		@SuppressWarnings("rawtypes")
+		Map map = (Map)object;
+		
+		wr.write("{");
+		boolean first = true;
+		
+		if(wr.isWriteClass())
+		{
+			wr.writeClass(object.getClass());
+			first = false;
+		}
+		
+		if(wr.isWriteId())
+		{
+			if(!first)
+				wr.write(",");
+			wr.writeId();
+			first = false;
+		}
+		
+		@SuppressWarnings("rawtypes")
+		Set keyset = map.keySet();
+		@SuppressWarnings("unchecked")
+		Object[] keys = keyset.toArray(new Object[keyset.size()]);
+		
+		if(keys.length>0)
+		{
+			if(!first)
+			{
+				wr.write(",");
+				first = false;
+			}
+			
+			boolean keystring = true;
+			for(int i=0; i<keys.length && keystring; i++)
+			{
+				if (!(keys[i] instanceof String))
+				{
+					keystring = false;
+					break;
+				}
+			}
+			
+			if(keystring)
+			{
+				for(int i=0; i<keys.length; i++)
+				{
+					Object val = map.get(keys[i]);
+					Class<?> valclazz = val!=null? val.getClass(): null;
+					Object key = keys[i];
+					
+					if(i>0)
+						wr.write(",");
+					wr.write("\"").write(key.toString()).write("\":");
+					traverser.doTraverse(val, valclazz, conversionprocessors, processors, mode, targetcl, wr);
+				}
+			}
+			else
+			{
+				wr.write("\"__keys\":[");
+				// just increase reference count because these helper objects do not count on read side
+				wr.incObjectCount();
+				for(int i=0; i<keys.length; i++)
+				{
+					if(i>0)
+						wr.write(",");
+					Object key = keys[i];
+					Class<?> keyclazz = key != null? key.getClass() : null;
+					traverser.doTraverse(key, keyclazz, conversionprocessors, processors, mode, targetcl, wr);
+				}
+				wr.write("]");
+				
+				wr.write(",\"__values\":[");
+				// just increase reference count because these helper objects do not count on read side
+				wr.incObjectCount();
+				for(int i=0; i<keys.length; i++)
+				{
+					if(i>0)
+						wr.write(",");
+					Object val = map.get(keys[i]);
+					Class<?> valclazz = val!=null? val.getClass(): null;
+					traverser.doTraverse(val, valclazz, conversionprocessors, processors, mode, targetcl, wr);
+				}
+				wr.write("]");
+			}
+		}
+		
+		wr.write("}");
+		
+		return object;
+	}
+	
+	/**
 	 *  Returns the class of a map value.
 	 *  @param val The value.
 	 *  @param context The context.
 	 *  @return The value class.
 	 */
-	public Class<?> getValueClass(Object val, Object context)
+	protected Class<?> getValueClass(Object val, Object context)
 	{
 		Class<?> valclazz = val!=null && !(val instanceof JsonObject)? val.getClass(): null;
 		return valclazz;
@@ -121,18 +240,20 @@ public class JsonMapProcessor implements ITraverseProcessor
 	/**
 	 * 
 	 */
-	public Object getReturnObject(Object object, Class clazz)
+	protected Object getReturnObject(Object object, Class<?> clazz)
 	{
 		Object ret = object;
 		
 		try
 		{
-			ret = clazz.newInstance();
+			ret = clazz.getDeclaredConstructor().newInstance();
 		}
 		catch(Exception e)
 		{
 			// Using linked hash map as default to avoid loosing order if has order.
-			ret = new LinkedHashMap();
+			@SuppressWarnings("rawtypes")
+			LinkedHashMap lhm = new LinkedHashMap();
+			ret = lhm;
 		}
 		
 		return ret;
